[core-service] fix: фиксики
